@@ -1,6 +1,6 @@
 package com.grigorievfinance.traderdiary;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -22,7 +22,7 @@ public class MatcherFactory {
 
         @SafeVarargs
         public final void assertMatch(Iterable<T> actual, T... expected) {
-            assertMatch(actual, Arrays.asList(expected));
+            assertMatch(actual, List.of(expected));
         }
 
         public void assertMatch(Iterable<T> actual, Iterable<T> expected) {
